--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ names.sql
 !unittests_in_js/package.json
 !unittests_in_js/8-api/package.json
 !unittests_in_js/9-api/package.json
+!unittests_in_js/10-api/package.json
